--- a/index.htm
+++ b/index.htm
@@ -16,12 +16,12 @@
 
         <nav>
           <ul>
-            <li>START</li>
-            <li>EINLEITUNG</li>
-            <li>DIE CHARAKTERE</li>
-            <li>UNSERE TOP-3</li>
-            <li>DAS BUCH</li>
-            <li>MEDIEN</li>
+            <li><a href="#start">START</a></li>
+            <li><a href="#einleitung">EINLEITUNG</a></li>
+            <li><a href="#charaktere">DIE CHARAKTERE</a></li>
+            <li><a href="#top3">UNSERE TOP-3</a></li>
+            <li><a href="#buch">DAS BUCH</a></li>
+            <li><a href="#medien">MEDIEN</a></li>
           </ul>
         </nav>
       </div>
