--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html lang="de" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>GravityFalls</title>
+    <title>Willkommen in GravityFalls</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="assets/css/reset.css" />
@@ -11,8 +11,7 @@
   <body>
     <header>
       <div class="grid-wrapper">
-        <div class="logo">
-        </div>
+        <img src="assets/img/logo.png" class="logo" alt="Gravity Falls Logo" />
 
         <nav>
           <ul>
@@ -27,17 +26,146 @@
       </div>
     </header>
 
-    <section class="section-jumbotron">
-      <div class="grid-wrapper">
-        <iframe src="https://www.youtube.com/embed/9m9gG9SxKgs?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      </div>
-    </section>
+    <main>
+      <section class="section-jumbotron" id="start">
+        <div class="grid-wrapper">
+          <video src="assets/videos/intro.mp4" controls></video>
+        </div>
+      </section>
 
-    <section class="section-introduction">
-    </section>
+      <section class="section-introduction" id="einleitung">
+        <div class="grid-wrapper">
+          <img src="assets/img/Dipper_and_Mabel.png" alt="Dipper und Mabel" class="introduction-dippermabel" />
+
+          <div class="box">
+            <p>Willkommen in Gravity Falls (Originaltitel: Gravity Falls)  ist eine US-amerikanische Zeichentrickserie, die von 2012 bis 2016 von Disney Television Animation produziert wurde. Entwickelt wurde die Serie von Alex Hirsch und die erste Folge “Die Touristenfalle” (Originaltitel: Tourist Trapped) wurde als Vorschau am 15. Juni 2012 gezeigt. Der offizielle Serienstart war der 29. Juni 2012 auf dem US-amerikanische Disney Channel. Die deutsche Erstausstrahlung war am 07.Januar 2013 auf dem deutschen Disney Channel. Die Serie hat 2 Staffeln die je 20 Folgen a 20 min umfasst.  </p>
+            <p>Die 12-jährigen Zwillinge Dipper und Mabel werden von ihren Eltern nach Gravity Falls, einem fiktiven Ort in Oregon geschickt, um dort die Sommerferien bei ihrem “Gronkel” (Großonkel) Stan zu verbringen. Dieser betreibt einen ungewöhnliches Kuriositätenmuseum, welches die “Mystery Shack” genannt wird. Dipper und Mabel sollen dort aushelfen aber sie bemerken schnell das in Gravity Falls alles nur purer Schein ist und die Umgebung von paranormalen Phänomenen heimgesucht wird. Die Zwillinge beschließen nach Antworten zu suchen nach dem Sie ein geheimnisvolles Buch, was Ihnen als Ratgeber dient, gefunden haben und erleben spannende Abenteuer mit Fabelwesen und Ungeheuer auf der Suche nach dem verschollenen Autor.</p>
+            <p>Jede Folge ist einzigartig und abwechslungsreich von der Handlung und überrascht mit dieser oft. Sie enthalten nicht nur Mystery- sondern auf Comedy-, Drama- und Romance-Elemente. Die Charaktere sind gut durchdacht und 3-Dimensional, man kann sich gut mit Ihnen identifizieren, da sie durch gewisse Angewohnheiten oder Laster glaubhaft und natürlich wirken. Gravity Falls ” ist eine Mystery and Crime Serie mit einem feinsinnigen Humor den Kinder gar nicht verstehen.” (Quelle: Gravity Falls Folge 33) Diese Tatsache und weitere versteckte Details die weit über den Verstand von Kindern hinausgeht macht die Serie auch sehr interessant für ältere Zuschauer und kann somit mit der gesamten Familie geschaut werden.</p>
+          </div>
+
+          <img src="assets/img/sticker/Hand 3.png" class="sticker" id="sticker-1" />
+          <img src="assets/img/sticker/skull.png" class="sticker" id="sticker-2" />
+        </div>
+      </section>
+
+      <section class="section-characters" id="charaktere">
+        <h1 class="header">Charaktere</h1>
+
+        <div class="grid-wrapper">
+          <div class="character">
+            <div class="avatar">
+              <img src="assets/img/dipper_avatar.png" class="avatar-image avatar-image-rotation-left" />
+
+              <img src="assets/img/sticker/dipper cap.png" class="sticker" id="sticker-3" />
+            </div>
+            <div class="details">
+              <h1 class="color-blue">Dipper Pines</h1>
+              <p>Dipper ist abenteuerlustig, misstrauisch, intelligent und immer auf der Suche nach neuen Rätseln, die er mit Hilfe eines Buches über die Mysterien von Gravity Falls löst. Er tendiert dazu, zu sehr nachzudenken und lange Listen zu schreiben, bevor er zur Tat schreitet. Seine Hobbys umfassen Lesen und Arcade-Automat spielen, weshalb Mabel ihn manchmal als Nerd bezeichnet. Seinen Spitznamen „Dipper“ erhielt er aufgrund eines Muttermals auf seiner Stirn, das die Form des Sternbilds Großer Wagen (engl., „Big Dipper“) hat. Er ist der jüngere, aber dennoch vernünftigere Geschwisterteil und einen Millimeter kleiner als seine Schwester. Anders als sie kann er das Erwachsenwerden kaum erwarten.</p>
+            </div>
+          </div>
+          <div class="character">
+            <div class="avatar">
+              <img src="assets/img/mabel_avatar.png" class="avatar-image avatar-image-rotation-right" />
+
+              <img src="assets/img/sticker/Mabel_rainbow.png" class="sticker" id="sticker-4" />
+              <img src="assets/img/sticker/shootin star.png" class="sticker" id="sticker-5" />
+            </div>
+            <div class="details">
+              <h1 class="color-pink">Mabel Pines</h1>
+              <p>Mabel ist die 12-jährige Zwillingsschwester von Dipper. Sie ist eine exzentrische Optimistin, stets gut gelaunt und aufgeschlossen bildet sie das charakterliche Gegenstück zu Dipper. Sie trägt mit Vorliebe bunte Strickpullis mit verschiedenen Motiven wie z.B. Lamas oder Sternschnuppen. Mabel mag Boygroups, Pyjama-Parties und interessiert sich für Vampire. Stets auf der Suche nach der großen Liebe hatte sie schon viele verschiedene Jungs gedatet. In der Folge "Das Schwein der Zeitreisenden" gewinnt sie ein Hausschwein, das sie „Schwabbel“ (engl. „Waddles“) nennt. Sie hat in Gravity Falls zwei beste Freundinnen namens Candy und Grenda. Sie ist genau 5 Minuten älter und einen Millimeter größer als ihr Bruder, verhält sich jedoch sehr kindisch und unreif. Anders als ihr Bruder ist sie strikt gegen das Erwachsenwerden und würde am liebsten für immer ein Kind bleiben, um Spaß zu haben.</p>
+            </div>
+          </div>
+          <div class="character">
+            <div class="avatar">
+              <img src="assets/img/stan_avatar.png" class="avatar-image avatar-image-rotation-left" />
+
+              <img src="assets/img/sticker/Stan pez.png" class="sticker" id="sticker-6" />
+              <img src="assets/img/sticker/Grunk.png" class="sticker" id="sticker-7" />
+            </div>
+            <div class="details">
+              <h1 class="color-green">Gronkel Stan</h1>
+              <p>Stan ist der mürrischer Großonkel von Dipper und Mabel. Zu seinen Hobbys zählen Glücksspiele und Fernsehen. Stan lebt in der „Mystery Shack“, einer Touristenfalle in Gestalt eines vorgeblichen Kuriositätenmuseums, das er den Touristen als „weltweit bizarrstes Museum“ vorstellt. In Wahrheit ist das Geschäft mit selbstgebastelten Fälschungen und Ramsch gefüllt. In erster Linie ist Gronkel Stan Verkäufer und seine Methoden, Geld zu verdienen, scheinen nicht immer legal zu sein. Sein Geschäft führt er rücksichtslos und knallhart, auch Dipper und Mabel müssen im Laden aushelfen. Insgeheim jedoch ist er stets sehr besorgt um die Kinder, weil deren Neugierde sie immer wieder in lebensgefährliche Situationen führt.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-top3" id="top3">
+        <h1 class="header">Unsere Top-3 Folgen</h1>
+
+        <div class="grid-wrapper">
+          <div class="character">
+            <div class="avatar">
+              <img src="assets/img/top3_atots.jpg" class="avatar-image avatar-image-rotation-left" />
+            </div>
+            <div class="details">
+              <h1 class="color-blue">Sarah: The Tale of Two Stans</h1>
+              <p>Ist halt kein Schwarzes Loch!</p>
+            </div>
+          </div>
+          <div class="character">
+            <div class="avatar">
+              <img src="assets/img/top3_ddnd.jpg" class="avatar-image avatar-image-rotation-right" />
+            </div>
+            <div class="details">
+              <h1 class="color-pink">Laura: Dungeons, Dungeons and more Dungeons</h1>
+              <p>Ich mag Dungeons.</p>
+            </div>
+          </div>
+          <div class="character">
+            <div class="avatar">
+              <img src="assets/img/top3_nwhs.jpg" class="avatar-image avatar-image-rotation-left" />
+            </div>
+            <div class="details">
+              <h1 class="color-green">Andreas: Not What He Seems</h1>
+              <p>Wichtig für Story diesdas</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-book" id="buch">
+        <h1 class="header">Buch</h1>
+
+        <div class="grid-wrapper">
+          <div class="image-grid">
+            <img src="assets/img/book_1.jpg" />
+            <img src="assets/img/book_2.jpg" />
+            <img src="assets/img/book_3.jpg" />
+          </div>
+
+          <div class="text-box">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum provident eius quibusdam veniam repellat deserunt aliquam alias accusamus maxime velit distinctio, molestias reiciendis libero similique placeat id error molestiae iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptate recusandae libero voluptas placeat quas hic laboriosam. Neque quidem fugit doloremque ad magni ullam beatae perspiciatis, sit labore consequatur earum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim totam voluptas obcaecati dolores deserunt, velit sint, quis temporibus modi, hic in dolor facilis magni maxime ipsum repudiandae nostrum veritatis dolorem!
+          </div>
+        </div>
+      </section>
+
+      <section class="section-media" id="medien">
+        <h1 class="header">Medien</h1>
+        
+        <div class="grid-wrapper">
+          <img src="assets/img/media_1.jpg" />
+          <img src="assets/img/media_2.jpg" />
+          <img src="assets/img/media_3.jpg" />
+          <img src="assets/img/media_4.jpg" />
+          <img src="assets/img/media_5.jpg" />
+          <img src="assets/img/media_6.jpg" />
+        </div>
+        <div class="grid-wrapper grid-music">
+          <audio src="assets/music/mabelsTheme.mp3" controls></audio>
+          <audio src="assets/music/16bitIntro.mp3" controls></audio>
+        </div>
+      </section>
+    </main>
 
     <footer>
-      Eine Webseite von Andreas, Laura und Sarah. Originalgrafiken von Disney. Abänderungen von Laura und Sarah. Diese Webseite wurde nicht von Disney erstellt oder überprüft.
+      <div class="grid-wrapper">
+        <p>
+          Eine Webseite von Andreas, Laura und Sarah. Originalgrafiken von Disney. Abänderungen von Laura und Sarah.<br />Diese Webseite wurde nicht von Disney erstellt oder überprüft.<br />
+          <br />
+          <a href="legal.htm">Impressum</a> / <a href="legal.htm#privacy">Datenschutzerklärung</a>
+        </p>
+      </div>
     </footer>
   </body>
 </html>
