--- a/index.htm
+++ b/index.htm
@@ -99,8 +99,8 @@
               <img src="assets/img/top3_atots.jpg" class="avatar-image avatar-image-rotation-left" />
             </div>
             <div class="details">
-              <h1 class="color-blue">Sarah: The Tale of Two Stans</h1>
-              <p>Ist halt kein Schwarzes Loch!</p>
+              <h1 class="color-blue">Andreas: A Tale of Two Stans</h1>
+              <p>A Tale of Two Stans ist eine Folge der zweiten Staffel. Sie spielt direkt nach der Folge "Not What He Seems", einer der wichtigsten Folgen für die durchgängige Story. In A Tale Of Two Stans erleben wird die Kindheit von Gronkel Stan, die Beziehung zu seiner Familie und seinem Bruder und, wie er zu der Person geworden ist, die er heute ist. Das, was ich an dieser Folge so besonders finde ist, dass sie eine wichtige Folge der Dramaturgie ist. Nach mehreren Folgen des bangens und der Action gibt es mit dieser Folge endlich eine kurze Verschnaufpause und dazu auch noch Antworten auf alle Fragen, die einem zu dem Charakter Stan einfallen würden.</p>
             </div>
           </div>
           <div class="character">
@@ -117,8 +117,8 @@
               <img src="assets/img/top3_nwhs.jpg" class="avatar-image avatar-image-rotation-left" />
             </div>
             <div class="details">
-              <h1 class="color-green">Andreas: Not What He Seems</h1>
-              <p>Wichtig für Story diesdas</p>
+              <h1 class="color-green">Sarah: Not What He Seems</h1>
+              <p>Diese Folge ist die Schlüsselfolge der gesamten Serie, es wird das größte Geheimnis von Gravity Falls gelüftet und wirft die Pines Familie in eine total unerwartete Situation. Nicht nur wird hier näher auf meinen lieblings Gronkel eingegangen, sondern zeigt diese schwierige Lage auch gleichzeitig die wahren Persönlichkeiten der Charaktere und ihre Bindung zueinander. Spannung, Action und Drama werde in dieser Folge ganz groß geschrieben! Ich kann mir “Not what he seems” immer wieder ansehen und bin immer noch genauso gefesselt dabei, wie beim ersten Mal.</p>
             </div>
           </div>
         </div>
