--- a/index.htm
+++ b/index.htm
@@ -135,7 +135,7 @@
           </div>
 
           <div class="text-box">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum provident eius quibusdam veniam repellat deserunt aliquam alias accusamus maxime velit distinctio, molestias reiciendis libero similique placeat id error molestiae iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptate recusandae libero voluptas placeat quas hic laboriosam. Neque quidem fugit doloremque ad magni ullam beatae perspiciatis, sit labore consequatur earum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim totam voluptas obcaecati dolores deserunt, velit sint, quis temporibus modi, hic in dolor facilis magni maxime ipsum repudiandae nostrum veritatis dolorem!
+            Das "Journal 3" Buch, basierend auf den drei Tagebüchern der Serie, kam kurz nach dem Serienende in den Handel und klärt weiterführende Fragen, die in der Serie nicht beantwortet wurden. Als perfekter Zusätz für jeden Fan der Serie bietet das Buch nicht nur alle Seiten, die man in der Serie sehen konnte, sondern auch weitere Inhalte, die nur beiläufig oder gar nicht in der Serie erwähnt wurden und die Geschichte und auch die Welt von Gravity Falls weiter vertieft.
           </div>
         </div>
       </section>
